syntax = "proto3";

package CommShared;

option csharp_namespace = "CommServices.CommShared";

message Message {
  string to = 1;
  string from = 2;
  string id = 3;
  MessageType type = 4;
  string data = 5;
  map<string, string> metadata = 6;
  map<string, string> headers = 7;
}

enum MessageType
{
  REQUEST = 0;
  RESPONSE = 1;
  NOTIFICATION = 2;
}